# graveyard

./: .gitattributes  README.md
CipherChat/: .gitignore  README.md  main.py
CipherChat/src/assets/: default_bridges.json
CipherChat/src/modules/: cons.py  cryptographic.py  installation.py  pip_installer.py  socks.py  special.py  utils.py  win_inet_pton.py
CipherChat/src/templates/: 404.html  500.html  about.html  index.html  setup.html
Clouded/: .gitignore  Cargo.toml
Clouded/benches/: captcha_bench.rs
Clouded/examples/: log_cleanup_example.rs
Clouded/src/: auth.rs  captcha.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
Clouded/src/deployment/: auth.rs  config.rs  domain_mapping_manager.rs  encryption.rs  errors.rs  health_checker.rs  health_monitor.rs  instance_pool.rs  load_balancer.rs  log_cleanup.rs  log_storage.rs  metrics_calculator.rs  mod.rs  persistence.rs  rate_limit.rs  reverse_proxy.rs  stream_manager.rs  tls.rs  types.rs
Clouded/static/: dashboard.html  index.html  login.html  register.html
Clouded/static/css/: components.css  dashboard.css  iam-captcha.css  main.css
Clouded/static/js/: app.js  dashboard.js  iam-captcha.js  login.js  register.js
IAm/: .env.example  .gitignore  Cargo.toml  hcaptcha-docs.txt  test_captcha.py
IAm/src/: auth.rs  handlers.rs  main.rs  templates.rs
IAm/src/captcha/: crypto.rs  generator.rs  handlers.rs  mod.rs  passive.rs
IAm/static/: app.js  iam-captcha.css  iam-captcha.js  iam-passive.js  index.js  login.css  style.css
IAm/templates/: dashboard.html  index.html  login.html
IPApi-PY/: .gitignore  .prettierignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
IPApi-PY/scripts/: 404.js  index.js
IPApi-PY/src/: api.py  constants.py  geo_info.py  ip_address.py  shared_data_store.py  utils.py
IPApi-PY/static/: security.txt
IPApi-PY/styles/: 404.css  index.css
IPApi-PY/templates/: 404.html  index.html
MouseMovement/: Firefox.xpi  README.md  background.js  content.js  manifest.json  popup.html  popup.js
PoF/: .gitignore  .prettierignore  app.py  package.json  workflow.yml
PoF/pof/: __init__.py  ipset.py  pof.py  utils.py
PoF/pof/detectors/: __init__.py  api_base.py  base.py  ip2location_detector.py  ipapi_detector.py  ipset_detector.py  update_utils.py  useragent_detector.py
PoF/templates/: challenge.html  challenge.min.html  challenge.min.mappings.json  challenge_auto.html  challenge_auto_minified.html  challenge_minified.html
PyVault/: .gitignore  README.md  main.py  requirements.txt  utils.py
SillyPython/: README.md  silly.py
SomeEmailClient/: README.md
SomeEmailClient/templates/client/: index.html  styles.css
Tunnels/: README.md  index.html
ai/: prompt.txt
antigravity-bin/: .SRCINFO  .gitignore  PKGBUILD  README.md  update-version.sh
antigravity-bin/.github/workflows/: publish-aur.yml  update.yml
chromakey/: .env.example  .gitattributes  README.md  app.py  pyproject.toml
chromakey/.github/workflows/: publish.yml
chromakey/chromakey/: __init__.py
chromakey/chromakey/templates/: login.html  overlay.html
cltunnel/: README.md  cltunnel.py
crua/: .gitignore  README.md  pyproject.toml
crua/crua/: __init__.py  api.py  browser.py  crawler.py  models.py  patterns.py  regex.py  shared.py
crua/tests/: test_browser_extraction.py  test_crawler_detection.py  test_crawler_extraction.py  test_crawler_name_extraction.py  test_is_crawler.py  test_public_api.py
crua/tests/fixtures/: browser_parse.csv  browser_user_agents.txt  crawler_names.json  crawler_user_agents.txt
editpy/: .gitignore  README.md  edit.py  requirements.txt  setup.py
editpy/src/editpy/: __init__.py  __main__.py
editpy/src/editpy/core/: __init__.py  buffer.py  syntax.py
editpy/src/editpy/ui/: __init__.py  input_handler.py  window.py
editpy/src/editpy/utils/: __init__.py  hex_utils.py  search.py
flask_AuthGenius/: .gitignore  README.md  requirements.txt  setup.py
flask_AuthGenius/src/flask_AuthGenius/: __init__.py  auth.py  utils.py  validation.py
flask_AuthGenius/src/flask_AuthGenius/templates/: login.html  register.html  twofactor-app.html
pq-chat-app/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
pq-chat-app/client/: Dockerfile  REFRESH_TOKENS.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.config.js  vitest.setup.js  vitest.wasm-mock.js
pq-chat-app/client-wasm/: CRYPTO.md  Cargo.toml  DOUBLE_RATCHET.md  X3DH.md
pq-chat-app/client-wasm/src/: crypto.rs  kdf.rs  lib.rs  prekeys.rs  ratchet.rs  x3dh.rs
pq-chat-app/client-wasm/tests/: crypto.rs  prekey_test.rs  ratchet_test.rs  x3dh_test.rs
pq-chat-app/client/src/: api.js  api.test.js  auth.js  conversation-manager.js  crypto-ratchet.test.js  crypto.js  main.js  main.test.js  ratchet-storage.js  ratchet-storage.test.js  sealed-sender.test.js  storage.js  token-manager.js  ui.js  ui.test.js  websocket.js  x3dh.test.js
pq-chat-app/client/src/styles/: main.css
pq-chat-app/server/: API.md  Cargo.toml  Dockerfile  REFRESH_TOKENS.md  ur.py
pq-chat-app/server/migrations/: 20240101000000_initial_schema.sql  20260120000000_prekey_bundles.sql  20260120100000_sealed_sender.sql
pq-chat-app/server/src/: auth.rs  cache.rs  database.rs  lib.rs  main.rs  metadata_protection.rs  middleware.rs  rate_limiter.rs  security_headers.rs  websocket.rs
pq-chat-app/server/src/handlers/: auth.rs  conversation.rs  device.rs  group.rs  message.rs  mod.rs  prekey.rs  reaction.rs  user.rs
pq-chat-app/server/src/models/: conversation.rs  device.rs  group.rs  message.rs  mod.rs  prekey.rs  reaction.rs  refresh_token.rs  user.rs
pq-chat-app/server/tests/: auth_user_test.rs  group_reaction_test.rs  message_conversation_test.rs  multi_device_test.rs  prekey_test.rs  rate_limit_test.rs  sealed_sender_test.rs  security_test.rs
pq-chat-app/server/tests/common/: mod.rs
repo/python/: requirements.txt
statuspage/: README.md
statuspage/templates/: status.html
