[package]
name = "secure-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-files = "0.6"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
argon2 = "0.5"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
totp-rs = { version = "5.7", features = ["qr", "gen_secret"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.9"
base64 = "0.22"
dotenvy = "0.15"
url = "2.5"
askama = "0.12"
sha2 = "0.10"

# Captcha dependencies
image = "0.25"
imageproc = "0.25"
resvg = "0.45"
rayon = "1.10"
bincode = "1.3"
regex-lite = "0.1"
aes-gcm = "0.10"
hmac = "0.12"
hex = "0.4"
