[project]
name = "flask-chromakey"
version = "0.1.0"
description = "Secure, visual authentication for Flask applications - perfect for presentations and streaming platforms"
readme = "README.md"
authors = [{name = "TN3W", email = "tn3w@protonmail.com"}]
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "flask",
    "authentication",
    "auth",
    "presentation",
    "streaming",
    "webinar",
    "jwt",
    "security",
    "chromakey",
    "visual-auth",
]
dependencies = [
    "flask>=2.0.0",
    "pyjwt>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tn3w/chromakey"
Documentation = "https://github.com/tn3w/chromakey"
Repository = "https://github.com/tn3w/chromakey.git"
Issues = "https://github.com/tn3w/chromakey/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chromakey"]

[tool.setuptools.package-data]
chromakey = ["templates/*.html"]
