[project]
name = "crua"
version = "1.1.0"
description = "Whitelist-based crawler and browser detection via user agent strings."
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
keywords = ["user-agent", "crawler", "bot-detection", "browser", "whitelist", "parser"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/tn3w/crua"
Repository = "https://github.com/tn3w/crua.git"
Issues = "https://github.com/tn3w/crua/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["crua"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=crua --cov-report=term-missing --cov-fail-under=100 -v"
