[package]
name = "chat-client-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
pqc_kyber = { version = "0.7", features = ["kyber1024", "wasm"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand_core = "0.6"
rand = "0.8"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
