[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "chat_server"
path = "src/lib.rs"

[[bin]]
name = "chat-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
argon2 = "0.5"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
futures-util = "0.3.31"

[dev-dependencies]
tokio-tungstenite = "0.24"
tempfile = "3.13"
tower = "0.5"
